# telegram-analytics

./: .env.vercel  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  README.md  ads_monitor.py  alert_bot.py  analytics_engine.py  api_server.py  backtesting.py  config.py  db_utils.py  docker-compose.yml  main.py  market_data.py  news_sentiment.py  pyproject.toml  rate_alerts.py  reports.py  requirements.txt  run_all.sh  seed_mock_data.py  sync_to_postgres.py  tapps_data.json  tapps_scraper.py  test_scraper_scale.py  tg_channel_monitor.py  ton_indexer.py
.github/workflows/: analytics.yml
dashboard/: package-lock.json  package.json  vitest.config.ts
dashboard/src/__tests__/: ComingSoon.test.tsx  MarketDepth.test.tsx  Settings.test.tsx  Sidebar.test.tsx  StatCard-extra.test.tsx  StatCard.test.tsx  TrendChart-extra.test.tsx  TrendChart.test.tsx  config.test.ts  db-new.test.ts  page-utils-extra.test.ts  page-utils.test.ts  setup.ts
dashboard/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
dashboard/src/components/: AppDetailClient.tsx  ComingSoon.tsx  (+6 more)
tests/: conftest.py  test_additional_features.py  test_ads_monitor.py  test_alert_bot.py  test_analytics_engine.py  test_api_server.py  test_app_detail.py  test_backtest_db.py  test_backtesting.py  test_competitors.py  test_db_new_functions.py  test_db_utils.py  test_main.py  test_market_data.py  test_news_sentiment.py  test_rate_alerts.py  test_rate_alerts_extended.py  test_reports.py  test_seed_mock_data.py  test_tapps_scraper.py  test_tg_channel_monitor.py  test_ton_indexer.py
(+13 files in other folders)
